0.001006 - 2012-08-27
  - Handle ':all' correctly

0.001005 - 2012-08-25
  - Add support for tags
  - Warn if defaults are not in exports
  - Add explicit dependency on Test::More 0.89

0.001004 - 2012-08-09
  - fix skipping when Sub::Exporter isn't installed

0.001003  2012-08-01 12:47:28 America/Chicago
  - remove warning if there are no defaults

0.001002  2012-07-31 08:59:43 America/Chicago
  - Make Sub::Exporter an optional dep (which is kinda the whole point)
  - warning about too complex usage of Sub::Exporter::Progressive is now
    an exception

0.001001  2012-07-29 19:58:40 America/Chicago
  - Fix '-all' option for the default group

0.001000  2012-07-29 16:44:01 America/Chicago
  - Initial Release
