@@ -1,3 +1,5 @@
+  - Rewrite -tag to :tag for Exporter.pm
+
 0.001006 - 2012-08-27
   - Handle ':all' correctly
 
